--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "aos": "^2.3.4",
     "axios": "^1.12.2",
     "daisyui": "^5.3.7",
+    "firebase": "^12.4.0",
     "react": "^19.1.1",
-    "react-animated-cursor": "^2.11.2",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
